# inspect-build-time-contract

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/inspect_build_time_contract/: __init__.py
tests/: test_integration.py  test_smoke.py
