[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspect-build-time-contract"
version = "0.1.0"
description = "Opt-in lint for Inspect AI tasks: warn when a verifiable task uses a model-graded scorer where a deterministic alternative is available."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Steve Ledbetter", email = "smledbetter@gmail.com"}]
keywords = ["inspect-ai", "evaluation", "llm", "scorer", "deterministic", "lint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "inspect-ai>=0.3.200",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0", "twine>=4.0"]

[project.urls]
Homepage = "https://github.com/smledbetter/inspect-build-time-contract"
Repository = "https://github.com/smledbetter/inspect-build-time-contract"
Issues = "https://github.com/smledbetter/inspect-build-time-contract/issues"
Changelog = "https://github.com/smledbetter/inspect-build-time-contract/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
